More work in getting plugins happening.

--- a/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
+++ b/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_if chrome --> 
 
 	<p id="breadcrumbs">
-	 <a href="<!-- tmpl_var Plugin_URL -->"> 
+	 <a href="<!-- tmpl_var S_PROGRAM_URL?flavor=plugins&plugin=bounce_handler -->"> 
 	 <!-- tmpl_var Plugin_Name --> 
 	 </a> 
  
