--- a/dada/templates/plugins/bridge/edit_email_msgs.tmpl
+++ b/dada/templates/plugins/bridge/edit_email_msgs.tmpl
@@ -350,7 +350,9 @@
 
 	
 	<input type="hidden" name="process" value="1" />
-	<input type="hidden" name="flavor" value="edit_email_msgs" />
+	<input type="hidden" name="flavor" value="plugins" />
+	<input type="hidden" name="plugin" value="bridge" />
+	<input type="hidden" name="prm" value="edit_email_msgs" />
 	<div class="buttonfloat">
 		<input type="reset" class="cautionary" value="Clear All Changes" />
 		<input type="submit" class="alertive" name="revert" value="Revert ALL Text to Defaults" />
