--- a/dada/templates/plugins/mailing_monitor/default.tmpl
+++ b/dada/templates/plugins/mailing_monitor/default.tmpl
@@ -12,7 +12,7 @@
 <fieldset> 
 <legend><!-- tmpl_var Plugin_Name --></legend>
 <form> 
-	<input type="hidden" name="plugin_url"          id="plugin_url"          value="<!-- tmpl_var Plugin_Url -->" /> 
+	<input type="hidden" name="s_program_url"          id="s_program_url"          value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
 	<input type="button" value="Refresh Monitor" id="mailing_monitor_button" class="processing" /> 
 </form>
 <div id="mailing_monitor_results_loading"> 
