--- a/dada/templates/plugins/bounce_handler/plugin_config.tmpl
+++ b/dada/templates/plugins/bounce_handler/plugin_config.tmpl
@@ -3,7 +3,7 @@
 <div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 
 <p id="breadcrumbs">
-<a href="<!-- tmpl_var Plugin_URL -->"> 
+<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=plugins&plugin=bounce_handler"> 
 <!-- tmpl_var Plugin_Name --> 
 </a> 
 
