--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -96,8 +96,10 @@
 
 	</div> 
 
-<form action="<!-- tmpl_var Plugin_URL -->" method="post"> 
-<input type="hidden" name="flavor" value="cgi_erase_scorecard" /> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<input type="hidden" name="prm" value="cgi_erase_scorecard" /> 
+<input type="hidden" name="flavor" value="plugins" /> 
+<input type="hidden" name="plugin" value="bounce_handler" /> 
 	<div class="buttonfloat">
 	 <input type="submit" class="alertive" onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" name="process" value="Erase Score Card" />
 	</div>
