--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -17,6 +17,9 @@ $PROGRAM_URL   = '<!-- tmpl_var PROGRAM_URL -->';
 <!-- tmpl_if configure_s_program_url --> 
 $S_PROGRAM_URL = '<!-- tmpl_var s_program_url_S_PROGRAM_URL -->';
 <!-- /tmpl_if -->
+
+$RUNNING_AS = '<!-- tmpl_var fast_cgi_RUNNING_AS default="CGI" -->';
+
 #---------------------------------------------------------------------#
 # The location (server path + URL) of static, support files
 #
@@ -437,11 +440,9 @@ $PROGRAM_NAME = '<!-- tmpl_var program_name_PROGRAM_NAME default="Dada Mail" -->
 =cut
 
 $S_PROGRAM_URL            ||= $PROGRAM_URL;
-my $PLUGIN_URL              = $S_PROGRAM_URL;
-   $PLUGIN_URL              =~ s/\/(\w+)\.(cgi|pl)(\??)$/\//;
-   $PLUGIN_URL             .= 'plugins';
-my $EXT_URL = $PLUGIN_URL;
-   $EXT_URL =~ s/plugins/extensions/;
+my $EXT_URL              = $S_PROGRAM_URL;
+   $EXT_URL              =~ s/\/(\w+)\.(cgi|pl)(\??)$/\//;
+   $EXT_URL             .= 'extensions';
 
 $ADMIN_MENU = [
 
@@ -687,98 +688,78 @@ $ADMIN_MENU = [
 #					# if you want to use them! 
 
 #					{
-#					-Title      => 'Mailing Monitor',
-#					-Title_URL  => $PLUGIN_URL."/mailing_monitor.cgi",
-#					-Function   => 'mailing_monitor',
-#					-Activated  => 0,
-#					},
-
-#					{
 #					-Title      => 'Tracker',
-#					-Title_URL  => $PLUGIN_URL."/tracker.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/tracker",
 #					-Function   => 'tracker',
 #					-Activated  => 1,
 #					},
 
 #					{
 #					-Title      => 'Bounce Handler',
-#					-Title_URL  => $PLUGIN_URL."/bounce_handler.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/bounce_handler",
 #					-Function   => 'bounce_handler',
 #					-Activated  => 1,
 #					},
 
 #					{
 #					-Title      => 'Bridge',
-#					-Title_URL  => $PLUGIN_URL."/bridge.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/bridge",
 #					-Function   => 'bridge',
 #					-Activated  => 1,
 #					},
 
-#					{-Title      => 'Scheduled Mailings',
-#					 -Title_URL  => $PLUGIN_URL."/scheduled_mailings.pl",
-#					 -Function   => 'scheduled_mailings',
-#					 -Activated  => 1,
-#					},
-
 #					{
 #					-Title      => 'Change the Program Root Password',
-#					-Title_URL  => $PLUGIN_URL."/change_root_password.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/change_root_password",
 #					-Function   => 'change_root_password',
 #					-Activated  => 0,
 #					},
 
 #					{
 #					-Title      => 'Change Your List Short Name',
-#					-Title_URL  => $PLUGIN_URL."/change_list_shortname.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/change_list_shortname",
 #					-Function   => 'change_list_shortname',
 #					-Activated  => 0,
 #					},
 
 #					{
-#					-Title      => 'Default Mass Mailing Messages',
-#					-Title_URL  => $PLUGIN_URL."/default_mass_mailing_messages.cgi",
-#					-Function   => 'default_mass_mailing_messages',
-#					-Activated  => 1,
-#					},
-
-#					{
 #					-Title      => 'Password Protect Directories',
-#					-Title_URL  => $PLUGIN_URL."/password_protect_directories.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/password_protect_directories",
 #					-Function   => 'password_protect_directories',
 #					-Activated  => 1,
 #					},
 
 #					{
 #					-Title      => 'View Logs',
-#					-Title_URL  => $PLUGIN_URL."/log_viewer.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/log_viewer",
 #					-Function   => 'log_viewer',
 #					-Activated  => 1,
 #					},
 
 #					{
 #					-Title      => 'Screen Cache',
-#					-Title_URL  => $PLUGIN_URL."/screen_cache.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/screen_cache",
 #					-Function   => 'screen_cache',
 #					-Activated  => 0,
 #					},
 
 #					{
 #					-Title      => 'Global Configuration',
-#					-Title_URL  => $PLUGIN_URL."/global_config.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/global_config",
 #					-Function   => 'global_config',
 #					-Activated  => 0,
 #					},
 
 #					{
 #					-Title      => 'Boilerplate Example',
-#					-Title_URL  => $PLUGIN_URL."/boilerplate_plugin.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/boilerplate_plugin",
 #					-Function   => 'boilerplate',
 #					-Activated  => 1,
 #					},
 
 #					{
 #					-Title      => 'View List Settings',
-#					-Title_URL  => $PLUGIN_URL."/view_list_settings.cgi",
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/view_list_settings",
 #					-Function   => 'view_list_settings',
 #					-Activated  => 1,
 #					},
