--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -875,6 +875,28 @@ editors also have the ability to make simple HTML tables for basic layouts.
 		<!-- tmpl_include upgrade_to_pro_dada.tmpl --> 
 	<!-- /tmpl_if -->
 
+    <!-- show_scheduled_jobs_options --> 
+    <p>
+    	<input type="checkbox" name="configure_scheduled_jobs" id="configure_scheduled_jobs" value="1" />			
+    <label for="configure_scheduled_jobs">Configure Scheduled Jobs</label>
+    </p>
+    
+    <div id="scheduled_jobs_options">
+        <fieldset>
+            <p>
+			<label for="scheduled_jobs_flavor">Scheduled Jobs Flavor:</label>
+			<input type="text" name="scheduled_jobs_flavor" id="scheduled_jobs_flavor" value=""/>			
+			</p>
+        	<p>
+        		<input type="checkbox" name="scheduled_jobs_log" id="scheduled_jobs_log" value="1"  />			
+        		<label for="scheduled_jobs_log">
+        			Log Job Output
+        		</label>
+        	</p>	
+        </fieldset> 
+    </div>
+    <!-- end tag -->
+
 
     <!-- show_fast_cgi_options --> 
     <p>
