Starting to write those docs!

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -272,8 +272,11 @@
 				</table> 
 				 <div class="buttonfloat">
 				 <input type="button" class="cautionary plugins_bridge_test_pop3" value="Test POP3 Login Information..." />
-				</div> 
-				 <div class="floatclear"></div> 	
+					  <input type="button" class="cautionary plugins_bridge_manually_check_messages" value="Manually Check and Send Waiting Messages..." />
+				 </div> 
+				 <div class="floatclear"></div> 
+				 
+				 
 				</fieldset> 
 			</div> 
 			
