--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -685,7 +685,7 @@ for it to work correctly. For help on setting the cronjob, see the
 		<div id="bounce_handler_configuration_help" class="clearskiesbox">
 			<p>
 				The Bounce Handler requires a new POP3 email account to be created, in order to work correctly. Make sure the email address isn't used for 
-				any other purpose, except for the bounce handler. See the <a href="<!-- tmpl_var DOC_URL -->/bounce_handler.cgi.html"  target="_blank">documentation for this plugin</a> for additional information. 
+				any other purpose, except for the bounce handler. See the <a href="<!-- tmpl_var DOC_URL -->/bounce_handler.html"  target="_blank">documentation for this plugin</a> for additional information. 
 				</p> 
 		</div> 
 	
