--- a/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
+++ b/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
@@ -3,12 +3,10 @@
 <!-- tmpl_if chrome --> 
 
 	<p id="breadcrumbs">
-	 <a href="<!-- tmpl_var S_PROGRAM_URL?flavor=plugins&plugin=bounce_handler -->"> 
+	 <a href="<!-- tmpl_var Plugin_URL -->"> 
 	 <!-- tmpl_var Plugin_Name --> 
 	 </a> 
- 
 	 &#187;
- 
 	 Search Results for: <!-- tmpl_var query ESCAPE="HTML" --> 
 	</p> 
 
