fix for incorrect field value - 'f' instead of, 'flavor'

--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -13,7 +13,7 @@
 </div>
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
- <input type="hidden" name="f" value="delete_archive" /> 
+ <input type="hidden" name="flavor" value="delete_archive" /> 
 
  <table class="stripedtable">
   <tr>
